react container working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,34 @@
-version: "3"
+version: "3.9"
 services:
   mariadb:
+    container_name: ww-db
     image: docker.io/bitnami/mariadb:10.6
     environment:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
-      - ALLOW_EMPTY_PASSWORD=yes
-      - MARIADB_USER=ww_user
-      - MARIADB_DATABASE=workweather
+      ALLOW_EMPTY_PASSWORD: yes
+      MARIADB_USER: ww_user
+      MARIADB_DATABASE: workweather
   api:
+    container_name: ww-api
     image: docker.io/bitnami/laravel:9
     ports:
-      - '8000:8000'
+      - "8000:8000"
     environment:
-      - DB_HOST=mariadb
-      - DB_PORT=3306
-      - DB_USERNAME=ww_user
-      - DB_DATABASE=workweather
+      DB_HOST: mariadb
+      DB_PORT: 3306
+      DB_USERNAME: ww_user
+      DDB_DATABASE: workweather
     volumes:
-      - "./api:/app"
+      - ./api:/app
     depends_on:
       - mariadb
   web:
+    container_name: ww-web
     build:
-      context: ./docker/web
+      dockerfile: web.Dockerfile
     volumes:
-      - './web:/work-weather'
-      - '/app/node_modules'
+      - ./web:/app
     ports:
-      - 3000:3000
+      - "3000:3000"
     depends_on:
       - api
